# telegram_code_scanner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  run_app.py
app/: main.py  settings.py
app/static/: index.html
telegram/: main.py  settings.py
