[project]
name = "telegram-code-scanner"
version = "0.1.0"
description = ""
authors = [
    {name = "well",email = "Well.heor@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.12.2,<0.13.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
